testing/tests/ui/crate_identifier.stderr
error: `crate` cannot be used as an identifier
 --> <source attribute>:1:3
       "crate }}"
 --> tests/ui/crate_identifier.rs:4:35
  |
4 | #[template(ext = "html", source = "{{ crate }}")]
  |                                   ^^^^^^^^^^^^^

error: `crate` cannot be used as an identifier
 --> <source attribute>:1:6
       "crate == 12 %}{% endif %}"
 --> tests/ui/crate_identifier.rs:8:35
  |
8 | #[template(ext = "html", source = "{% if crate == 12 %}{% endif %}")]
  |                                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: `crate` cannot be used as an identifier
 --> <source attribute>:1:9
       "crate %}{% endmatch %}"
  --> tests/ui/crate_identifier.rs:12:35
   |
12 | #[template(ext = "html", source = "{% match crate %}{% endmatch %}")]
   |                                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: cannot use `crate` as a name: it is a rust keyword
 --> <source attribute>:1:7
       "crate %}"
  --> tests/ui/crate_identifier.rs:16:35
   |
16 | #[template(ext = "html", source = "{% let crate %}")]
   |                                   ^^^^^^^^^^^^^^^^^

error: cannot use `crate` as a name: it is a rust keyword
 --> <source attribute>:1:7
       "crate = 12 %}"
  --> tests/ui/crate_identifier.rs:20:35
   |
20 | #[template(ext = "html", source = "{% let crate = 12 %}")]
   |                                   ^^^^^^^^^^^^^^^^^^^^^^

error: `crate` cannot be used as an identifier
 --> <source attribute>:1:15
       " }}"
  --> tests/ui/crate_identifier.rs:24:35
   |
24 | #[template(ext = "html", source = "{{ self.a.crate }}")]
   |                                   ^^^^^^^^^^^^^^^^^^^^

error: `super` cannot be used as an identifier
 --> <source attribute>:1:3
       "super }}"
  --> tests/ui/crate_identifier.rs:30:35
   |
30 | #[template(ext = "html", source = "{{ super }}")]
   |                                   ^^^^^^^^^^^^^

error: `super` cannot be used as an identifier
 --> <source attribute>:1:6
       "super == 12 %}{% endif %}"
  --> tests/ui/crate_identifier.rs:34:35
   |
34 | #[template(ext = "html", source = "{% if super == 12 %}{% endif %}")]
   |                                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: `super` cannot be used as an identifier
 --> <source attribute>:1:9
       "super %}{% endmatch %}"
  --> tests/ui/crate_identifier.rs:38:35
   |
38 | #[template(ext = "html", source = "{% match super %}{% endmatch %}")]
   |                                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: cannot use `super` as a name: it is a rust keyword
 --> <source attribute>:1:7
       "super %}"
  --> tests/ui/crate_identifier.rs:42:35
   |
42 | #[template(ext = "html", source = "{% let super %}")]
   |                                   ^^^^^^^^^^^^^^^^^

error: cannot use `super` as a name: it is a rust keyword
 --> <source attribute>:1:7
       "super = 12 %}"
  --> tests/ui/crate_identifier.rs:46:35
   |
46 | #[template(ext = "html", source = "{% let super = 12 %}")]
   |                                   ^^^^^^^^^^^^^^^^^^^^^^

error: `super` cannot be used as an identifier
 --> <source attribute>:1:15
       " }}"
  --> tests/ui/crate_identifier.rs:50:35
   |
50 | #[template(ext = "html", source = "{{ self.a.super }}")]
   |                                   ^^^^^^^^^^^^^^^^^^^^

error: `Self` cannot be used as an identifier
 --> <source attribute>:1:3
       "Self }}"
  --> tests/ui/crate_identifier.rs:56:35
   |
56 | #[template(ext = "html", source = "{{ Self }}")]
   |                                   ^^^^^^^^^^^^

error: `Self` cannot be used as an identifier
 --> <source attribute>:1:6
       "Self == 12 %}{% endif %}"
  --> tests/ui/crate_identifier.rs:60:35
   |
60 | #[template(ext = "html", source = "{% if Self == 12 %}{% endif %}")]
   |                                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: `Self` cannot be used as an identifier
 --> <source attribute>:1:9
       "Self %}{% endmatch %}"
  --> tests/ui/crate_identifier.rs:64:35
   |
64 | #[template(ext = "html", source = "{% match Self %}{% endmatch %}")]
   |                                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: `Self` cannot be used as an identifier
 --> <source attribute>:1:11
       " %}"
  --> tests/ui/crate_identifier.rs:68:35
   |
68 | #[template(ext = "html", source = "{% let Self %}")]
   |                                   ^^^^^^^^^^^^^^^^

error: `Self` cannot be used as an identifier
 --> <source attribute>:1:11
       " = 12 %}"
  --> tests/ui/crate_identifier.rs:72:35
   |
72 | #[template(ext = "html", source = "{% let Self = 12 %}")]
   |                                   ^^^^^^^^^^^^^^^^^^^^^

error: `Self` cannot be used as an identifier
 --> <source attribute>:1:14
       " }}"
  --> tests/ui/crate_identifier.rs:76:35
   |
76 | #[template(ext = "html", source = "{{ self.a.Self }}")]
   |                                   ^^^^^^^^^^^^^^^^^^^

error: cannot use `self` as a name: it is a rust keyword
 --> <source attribute>:1:7
       "self %}"
  --> tests/ui/crate_identifier.rs:82:35
   |
82 | #[template(ext = "html", source = "{% let self %}")]
   |                                   ^^^^^^^^^^^^^^^^

error: cannot use `self` as a name: it is a rust keyword
 --> <source attribute>:1:7
       "self = 12 %}"
  --> tests/ui/crate_identifier.rs:86:35
   |
86 | #[template(ext = "html", source = "{% let self = 12 %}")]
   |                                   ^^^^^^^^^^^^^^^^^^^^^

error: `self` cannot be used as an identifier
 --> <source attribute>:1:14
       " }}"
  --> tests/ui/crate_identifier.rs:90:35
   |
90 | #[template(ext = "html", source = "{{ self.a.self }}")]
   |                                   ^^^^^^^^^^^^^^^^^^^

error: `crate` cannot be used as an identifier
 --> <source attribute>:1:41
       "crate<338<c7}}6unsafe/63a3ae\u{c}\u{c}\u{c}%et"
  --> tests/ui/crate_identifier.rs:99:14
   |
99 |     source = "{{\u{c}KK3e331<c7}}61/63m3333u7<c0.}}\u{6}\0\u{c}\u{c}{{c/crate<338<c7}}6unsafe/63a3ae\u{c}\u{c}\u{c}%et"
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
